--- a/App_Mobile/app_mobile/package.json
+++ b/App_Mobile/app_mobile/package.json
@@ -1,6 +1,6 @@
 {
   "nativescript": {
-    "id": "org.nativescript.appmobile",
+    "id": "org.nativescript.vuephoto",
     "tns-android": {
       "version": "6.3.1"
     },
@@ -13,6 +13,12 @@
   "repository": "<fill-your-repository-here>",
   "dependencies": {
     "@nativescript/theme": "~2.2.1",
+    "axios": "^0.19.2",
+    "http": "0.0.0",
+    "nativescript-background-http": "^4.2.1",
+    "nativescript-camera": "^4.5.0",
+    "nativescript-geolocation": "^5.1.0",
+    "nativescript-imagepicker": "^7.1.0",
     "nativescript-vue": "~2.4.0",
     "tns-core-modules": "~6.3.0"
   },
