--- a/player_geoquizz/package.json
+++ b/player_geoquizz/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "leaflet": "^1.6.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.1.6",
+    "vue2-leaflet": "^2.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "bootstrap": "^4.0.0-beta",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
     "vue-template-compiler": "^2.6.11"
