--- a/player_geoquizz/package.json
+++ b/player_geoquizz/package.json
@@ -11,8 +11,10 @@
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
     "vue": "^2.6.11",
+    "vue-js-modal": "^1.3.33",
     "vue-router": "^3.1.6",
-    "vue2-leaflet": "^2.5.2"
+    "vue2-leaflet": "^2.5.2",
+    "vuejs-progress-bar": "^1.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
