--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-js-modal": "^1.3.33",
+    "vue-router": "^3.1.6",
+    "vue-upload-image": "^1.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
