--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "leaflet": "^1.6.0",
     "vue": "^2.6.11",
     "vue-js-modal": "^1.3.33",
     "vue-router": "^3.1.6",
-    "vue-upload-image": "^1.1.5"
+    "vue-upload-image": "^1.1.5",
+    "vue2-leaflet": "^2.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
