--- a/App_Mobile/app_mobile/package.json
+++ b/App_Mobile/app_mobile/package.json
@@ -2,7 +2,7 @@
   "nativescript": {
     "id": "org.nativescript.vuephoto",
     "tns-android": {
-      "version": "6.3.1"
+      "version": "6.2.0"
     },
     "tns-ios": {
       "version": "6.3.0"
@@ -20,6 +20,7 @@
     "nativescript-geolocation": "^5.1.0",
     "nativescript-imagepicker": "^7.1.0",
     "nativescript-loading-indicator-new": "^2.1.0",
+    "nativescript-mapbox": "^4.4.1",
     "nativescript-vue": "~2.4.0",
     "tns-core-modules": "~6.3.0"
   },
