--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
     "vue": "^2.6.11",
