--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "imgbb-uploader": "^1.0.3",
     "leaflet": "^1.6.0",
     "vue": "^2.6.11",
     "vue-js-modal": "^1.3.33",
