--- a/APIs/docker-compose.yml
+++ b/APIs/docker-compose.yml
@@ -49,6 +49,9 @@ services:
     command: bash -c "npm i && node server.js"
     links:
       - mysql:db
+    networks:
+      - d.net  
+         
 
   api_mobile:
     container_name: api_mobile
@@ -65,6 +68,8 @@ services:
     command: bash -c "npm i && node server.js"
     links:
       - mysql:db
+    networks:
+      - d.net  
       
   api_backoffice:        
     container_name: api_backoffice
@@ -80,6 +85,8 @@ services:
     working_dir: /app/api_backoffice
     command: bash -c "npm i && node server.js"
     links:
-      - mysql:db   
+      - mysql:db
+    networks:
+      - d.net     
 
       
